@@ -6,82 +6,20 @@ buildscript {
 	}
 }
 
-allprojects {
-	apply plugin: "java"
-	apply plugin: "maven"
-	apply plugin: "signing"
-	group = "com.github.akurilov"
-	version = "2.1.7"
-}
+apply plugin: "java"
+apply plugin: "maven"
+apply plugin: "signing"
+group = "com.github.akurilov"
+version = "2.3.0"
+
+sourceCompatibility = 11
+targetCompatibility = 11
+
 
 ext {
-	provided3rdPartyClasses = [
-		"it/unimi/dsi/fastutil/bytes/ByteIterator.class",
-		"it/unimi/dsi/fastutil/Stack.class",
-		"it/unimi/dsi/fastutil/Arrays.class",
-		"it/unimi/dsi/fastutil/Swapper.class",
-		"it/unimi/dsi/fastutil/Hash.class",
-		"it/unimi/dsi/fastutil/Function.class",
-		"it/unimi/dsi/fastutil/HashCommon.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectCollection.class",
-		"it/unimi/dsi/fastutil/objects/ObjectSet.class",
-		"it/unimi/dsi/fastutil/objects/ObjectBidirectionalIterator.class",
-		"it/unimi/dsi/fastutil/objects/Object2IntMap.class",
-		"it/unimi/dsi/fastutil/objects/Object2IntMap\$FastEntrySet.class",
-		"it/unimi/dsi/fastutil/objects/ObjectList.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectList.class",
-		"it/unimi/dsi/fastutil/objects/ObjectCollection.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectListIterator.class",
-		"it/unimi/dsi/fastutil/objects/ObjectArrayList.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObject2IntFunction.class",
-		"it/unimi/dsi/fastutil/objects/Object2IntFunction.class",
-		"it/unimi/dsi/fastutil/objects/ObjectIterators.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObject2IntMap.class",
-		"it/unimi/dsi/fastutil/objects/ObjectArrays.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectBidirectionalIterator.class",
-		"it/unimi/dsi/fastutil/objects/ObjectIterator.class",
-		"it/unimi/dsi/fastutil/objects/ObjectArraySet.class",
-		"it/unimi/dsi/fastutil/objects/Object2IntOpenHashMap.class",
-		"it/unimi/dsi/fastutil/objects/ObjectListIterator.class",
-		"it/unimi/dsi/fastutil/objects/ObjectIterable.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectSet.class",
-		"it/unimi/dsi/fastutil/objects/AbstractObjectIterator.class",
-		"it/unimi/dsi/fastutil/BidirectionalIterator.class",
-		"it/unimi/dsi/fastutil/shorts/ShortIterator.class",
-		"it/unimi/dsi/fastutil/ints/IntArrayList.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntIterator.class",
-		"it/unimi/dsi/fastutil/ints/IntListIterator.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntCollection.class",
-		"it/unimi/dsi/fastutil/ints/AbstractInt2IntMap.class",
-		"it/unimi/dsi/fastutil/ints/AbstractInt2ObjectFunction.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntBidirectionalIterator.class",
-		"it/unimi/dsi/fastutil/ints/Int2IntFunction.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntSet.class",
-		"it/unimi/dsi/fastutil/ints/Int2IntOpenHashMap.class",
-		"it/unimi/dsi/fastutil/ints/IntArraySet.class",
-		"it/unimi/dsi/fastutil/ints/IntList.class",
-		"it/unimi/dsi/fastutil/ints/IntStack.class",
-		"it/unimi/dsi/fastutil/ints/IntIterator.class",
-		"it/unimi/dsi/fastutil/ints/IntBidirectionalIterator.class",
-		"it/unimi/dsi/fastutil/ints/IntIterable.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectFunction.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectOpenHashMap.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectOpenHashMap\$KeyIterator.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectOpenHashMap\$KeySet.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectOpenHashMap\$MapIterator.class",
-		"it/unimi/dsi/fastutil/ints/IntArrays.class",
-		"it/unimi/dsi/fastutil/ints/IntCollection.class",
-		"it/unimi/dsi/fastutil/ints/AbstractInt2IntFunction.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectMap.class",
-		"it/unimi/dsi/fastutil/ints/Int2ObjectMap\$FastEntrySet.class",
-		"it/unimi/dsi/fastutil/ints/Int2IntMap.class",
-		"it/unimi/dsi/fastutil/ints/Int2IntMap\$FastEntrySet.class",
-		"it/unimi/dsi/fastutil/ints/IntIterators.class",
-		"it/unimi/dsi/fastutil/ints/IntComparator.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntListIterator.class",
-		"it/unimi/dsi/fastutil/ints/AbstractIntList.class",
-		"it/unimi/dsi/fastutil/ints/AbstractInt2ObjectMap.class",
-		"it/unimi/dsi/fastutil/ints/IntSet.class",
+	moduleName = "com.github.akurilov.commons"
+	depVersion = [
+	    "juel" : "2.2.7",
 	]
 }
 
@@ -89,46 +27,62 @@ repositories {
 	mavenCentral()
 }
 
-configurations {
-	partial
+wrapper {
+	gradleVersion = "4.10.3"
 }
 
 dependencies {
-	compile("org.apache.commons:commons-collections4:4.1")
-	partial("it.unimi.dsi:fastutil:8.1.1") {
-		transitive = false
-	}
+	compile(
+		"de.odysseus.juel:juel-api:${depVersion.juel}",
+		"de.odysseus.juel:juel-impl:${depVersion.juel}",
+	)
 	testCompile("junit:junit:4.12")
 }
 
 compileJava {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs = [
+			'--module-path', classpath.asPath,
+		]
+		classpath = files()
+	}
 }
 
 compileTestJava {
-	sourceCompatibility = JavaVersion.VERSION_1_8
-	targetCompatibility = JavaVersion.VERSION_1_8
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		options.compilerArgs = [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'junit',
+			'--add-reads', "$moduleName=junit",
+			'--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+		]
+		classpath = files()
+	}
 }
 
 jar {
 	manifest {
 		attributes (
+			"Automatic-Module-Name": moduleName,
 			"Implementation-Version": version,
 			"Implementation-Title": rootProject.name,
 		)
 	}
-	provided3rdPartyClasses.each {
-		final clsName = it
-		from(configurations.partial.collect { zipTree(it) }) {
-			include "**" + clsName
-		}
+	inputs.property("moduleName", moduleName)
+	from configurations.compile.collect {
+		it.isDirectory() ? it : zipTree(it)
 	}
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = "sources"
 	from sourceSets.main.allSource
+}
+
+javadoc {
+	options.addStringOption("-module-path", classpath.asPath)
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -143,6 +97,18 @@ artifacts {
 }
 
 test {
+	sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_11
+	inputs.property("moduleName", moduleName)
+	doFirst {
+		jvmArgs = [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'ALL-MODULE-PATH',
+			'--add-reads', "$moduleName=junit",
+			'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+		]
+		classpath = files()
+	}
 	jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
 	jvmArgs "-XX:MaxDirectMemorySize=1g"
 	jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
@@ -223,10 +189,6 @@ uploadArchives {
 			}
 		}
 	}
-}
-
-task wrapper(type: Wrapper) {
-	gradleVersion = "4.6"
 }
 
 task printVersion {
